--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "mongodb": "^3.1.6"
+    "mongodb": "^3.1.6",
+    "nodemon": "^1.18.4",
+    "path": "^0.12.7"
   }
 }
