--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "watchify src/index.js -o dist/app.js -v",
-    "build": "browserify src/index.js -o dist/app.js",
+    "watch": "watchify src/index.js -o dist/bundle.js -v",
+    "build": "browserify src/index.js -o dist/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
