--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "watchify src/index.js -o dist/bundle.js -v",
+    "watch": "watchify src/index.js -o dist/bundle.js -v --debug",
     "build": "browserify src/index.js -o dist/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
