--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "dev": "bash scripts/run_dev.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
