--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+MONGO_DB_URL=mongodb://localhost:27017/db
 FACEBOOK_APP_ID=288354991892350
 FACEBOOK_APP_SECRET=2dab2e281ee0f119e9b1bd4cdeab30a2
 FACEBOOK_CALLBACK_URL=https://www.apthunt.tk/auth/facebook/callback
