--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.15",
+    "mongoose-int32": "^0.3.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "session-file-store": "^1.2.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
