--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-select": "^2.0.0"
   },
   "babel": {
     "presets": [
