--- a/client/package.json
+++ b/client/package.json
@@ -2,40 +2,30 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "watch": "mkdir -p dist && watchify src/index.js -o dist/bundle.js -v --debug",
-    "build": "mkdir -p dist && browserify src/index.js -o dist/bundle.js",
+    "dev": "webpack --config webpack.development.config.js",
+    "build": "webpack --config webpack.production.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.1",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^10.0.0",
-    "browserify": "^16.2.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "watchify": "^3.11.0"
+    "copy-webpack-plugin": "^4.5.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-react",
-      "@babel/env"
-    ]
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
   }
 }
