--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^10.0.0",
     "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "react-date-picker": "^6.12.1",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0"
   }
