--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,10 @@
     "@babel/polyfill": "^7.0.0",
     "bootstrap-social": "^5.1.1",
     "create-react-class": "^15.6.3",
-    "react-16-bootstrap-date-picker": "^5.1.2",
+    "moment": "^2.22.2",
     "react-bootstrap": "^0.32.4",
+    "react-datetime": "^2.15.0",
+    "react-phone-number-input": "^2.2.8",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0"
   }
