added google location querying

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGO_DB_URL=mongodb://localhost:27017/db
 SESSION_SECRET=d79bd86803e5b8a8391524e0e9618496
+GOOGLE_API_KEY=AIzaSyC4DTyzogm6CRc2oZMne4yb75SWyelvavE
 FACEBOOK_APP_ID=288354991892350
 FACEBOOK_APP_SECRET=2dab2e281ee0f119e9b1bd4cdeab30a2
 FACEBOOK_CALLBACK_URL=https://www.apthunt.tk/auth/facebook/callback
