--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.2.15",
     "mongoose-int32": "^0.3.0",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
