--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.22.2",
     "react-bootstrap": "^0.32.4",
     "react-datetime": "^2.15.0",
+    "react-google-maps": "^9.4.5",
     "react-phone-number-input": "^2.2.8",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0"
