--- a/client/package.json
+++ b/client/package.json
@@ -31,10 +31,12 @@
     "bootstrap-social": "^5.1.1",
     "create-react-class": "^15.6.3",
     "moment": "^2.22.2",
+    "react-big-calendar": "^0.20.1",
     "react-bootstrap": "^0.32.4",
     "react-datetime": "^2.15.0",
     "react-google-maps": "^9.4.5",
     "react-phone-number-input": "^2.2.8",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0"
   }
