--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-bootstrap": "^0.32.4",
     "react-datetime": "^2.15.0",
     "react-google-maps": "^9.4.5",
+    "react-leaf-carousel": "^1.2.1",
     "react-phone-number-input": "^2.2.8",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
