--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^2.2.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "session-file-store": "^1.2.0",
