--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.19.1",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
